--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "antd": "^3.6.1",
     "babel-preset-react-app": "^3.1.1",
+    "enzyme": "^3.6.0",
     "firebase": "^5.0.4",
     "indicative": "^5.0.5",
+    "jest-cli": "^20.0.4",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
@@ -24,7 +26,7 @@
   "scripts": {
     "start": "NODE_PATH=src react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --browser",
     "eject": "react-scripts eject"
   }
 }
