--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_PATH=src/
 REACT_APP_FCM_SERVER_KEY=AAAAOfxTGv0:APA91bGIPTnC82-Y_VUXcaCT2Fzgkg13w8rN2j6GokmP25tnYKEL6PjTghu_HQN98rBU-L7IO9YlYstlZ4FG28R7iAZgcSwFWwLzMHwDagxLSpMYD15DUpptvBoMg-JVJPCZWSrABvta
+REACT_APP_BUGSNAG_KEY=e8634b26bfa72ba5616821276fee455d
