--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "antd": "^3.6.1",
     "babel-preset-react-app": "^3.1.1",
+    "bugsnag-js": "^4.7.3",
+    "bugsnag-react": "^1.1.1",
     "enzyme": "^3.6.0",
     "firebase": "^5.0.4",
     "indicative": "^5.0.5",
