--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "babel-preset-react-app": "^3.1.1",
     "bugsnag-js": "^4.7.3",
     "bugsnag-react": "^1.1.1",
-    "enzyme": "^3.6.0",
     "firebase": "^5.0.4",
     "indicative": "^5.0.5",
     "jest-cli": "^20.0.4",
@@ -23,12 +22,18 @@
     "react-scripts": "1.1.4",
     "react-spinners": "^0.3.2",
     "redux": "^4.0.0",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "NODE_PATH=src react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --browser",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "bugsnag-sourcemaps": "^1.0.4",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0"
   }
 }
